@@ -108,17 +108,10 @@ class Sys::IO::Stat : pointer {
   }
   
   method S : int () {
+    
     my $ok = 0;
-    # Unix domain socket
-    if (Sys::OS->is_windows) {
-      if (($self->st_mode & IO->S_IFMT) == (IO->S_IFDIR | IO->S_IFIFO)) {
-        $ok = 1;
-      }
-    }
-    else {
-      if (($self->st_mode & IO->S_IFMT) == IO->S_IFSOCK) {
-        $ok = 1;
-      }
+    if (($self->st_mode & IO->S_IFMT) == IO->S_IFSOCK) {
+      $ok = 1;
     }
     
     return $ok;
